--- a/pom.xml
+++ b/pom.xml
@@ -917,6 +917,11 @@ Optional parameters:
 					<url>http://download.eclipse.org/tools/ajdt/47/dev/update</url>
 				</repository>
 				<repository>
+					<id>latest-m2e</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/technology/m2e/releases</url>
+				</repository>
+				<repository>
 					<id>swtbot</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/technology/swtbot/releases/latest/</url>
