--- a/pom.xml
+++ b/pom.xml
@@ -901,10 +901,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.7/</url>
 				</repository> -->
+<!--				<repository>
+					<id>platform-m-build</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/eclipse/updates/4.7-M-builds</url>
+				</repository> -->
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20170516192513/repository/</url>
+					<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20170818183741/repository/</url>
 				</repository>
 				<repository>
 					<id>mylyn</id>
