--- a/pom.xml
+++ b/pom.xml
@@ -860,10 +860,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/modeling/tmf/xtext/updates/milestones/</url>
 				</repository>
+				<!--				<repository>
+									<id>lsp4e-snapshots</id>
+									<layout>p2</layout>
+									<url>http://download.eclipse.org/lsp4e/snapshots/</url>
+								</repository> -->
 				<repository>
-					<id>lsp4e</id>
+					<id>lsp4e-releases</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/lsp4e/snapshots/</url>
+					<url>https://projects.eclipse.org/projects/technology.lsp4e/releases/0.3.0</url>
 				</repository>
 			</repositories>
 			<modules>
@@ -991,10 +996,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/modeling/tmf/xtext/updates/milestones/</url>
 				</repository>
-				<repository>
-					<id>lsp4e</id>
+<!--				<repository>
+					<id>lsp4e-snapshots</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/lsp4e/snapshots/</url>
+				</repository> -->
+				<repository>
+					<id>lsp4e-releases</id>
+					<layout>p2</layout>
+					<url>https://projects.eclipse.org/projects/technology.lsp4e/releases/0.3.0</url>
 				</repository>
 			</repositories>
 			<modules>
