--- a/pom.xml
+++ b/pom.xml
@@ -1053,10 +1053,15 @@ Optional parameters:
 			<url>http://dist.springsource.com/${dist.type}/TOOLS/gradle/${dist.eclipse-integration-gradle-version}</url>
 		</repository>
 		<repository>
-			<id>sts4-language-servers</id>
+			<id>sts4-language-servers-snapshots</id>
+			<layout>p2</layout>
+			<url>http://dist.springsource.com/snapshot/TOOLS/sts4-language-servers/nightly</url>
+		</repository>
+<!--		<repository>
+			<id>sts4-language-servers-releases</id>
 			<layout>p2</layout>
 			<url>http://dist.springsource.com/release/TOOLS/sts4-language-servers</url>
-		</repository>
+		</repository> -->
 		<repository>
 			<id>egit</id>
 			<layout>p2</layout>
