--- a/pom.xml
+++ b/pom.xml
@@ -860,11 +860,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/modeling/tmf/xtext/updates/milestones/</url>
 				</repository>
-				<!--				<repository>
-									<id>lsp4e-snapshots</id>
-									<layout>p2</layout>
-									<url>http://download.eclipse.org/lsp4e/snapshots/</url>
-								</repository> -->
+				<repository>
+					<id>lsp4e-snapshots</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/lsp4e/snapshots/</url>
+				</repository>
 				<repository>
 					<id>lsp4e-releases</id>
 					<layout>p2</layout>
@@ -991,11 +991,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/modeling/tmf/xtext/updates/milestones/</url>
 				</repository>
-<!--				<repository>
+				<repository>
 					<id>lsp4e-snapshots</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/lsp4e/snapshots/</url>
-				</repository> -->
+				</repository>
 				<repository>
 					<id>lsp4e-releases</id>
 					<layout>p2</layout>
