--- a/pom.xml
+++ b/pom.xml
@@ -909,7 +909,7 @@ Optional parameters:
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20170818183741/repository/</url>
+					<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20170919201930/repository/</url>
 				</repository>
 				<repository>
 					<id>mylyn</id>
@@ -927,9 +927,9 @@ Optional parameters:
 					<url>http://download.eclipse.org/technology/m2e/releases</url>
 				</repository>
 				<repository>
-					<id>latest-m2e-snapshot</id>
+					<id>latest-m2e-milestones</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/technology/m2e/milestones/1.8/1.8.2.20171007-0217/</url>
+					<url>http://download.eclipse.org/technology/m2e/milestones/1.8/</url>
 				</repository>
 				<repository>
 					<id>swtbot</id>
