--- a/pom.xml
+++ b/pom.xml
@@ -1058,10 +1058,15 @@ Optional parameters:
 			<url>http://dist.springsource.com/snapshot/TOOLS/sts4-language-servers/nightly</url>
 		</repository> -->
 		<repository>
+			<id>sts4-language-servers-specific-release</id>
+			<layout>p2</layout>
+			<url>http://dist.springsource.com/release/TOOLS/sts4-language-servers/0.0.10.201710110505/</url>
+		</repository>
+<!--		<repository>
 			<id>sts4-language-servers-releases</id>
 			<layout>p2</layout>
 			<url>http://dist.springsource.com/release/TOOLS/sts4-language-servers</url>
-		</repository>
+		</repository> -->
 		<repository>
 			<id>egit</id>
 			<layout>p2</layout>
