added eclipse 4.8 target profile, package, and product

--- a/pom.xml
+++ b/pom.xml
@@ -1019,6 +1019,132 @@ Optional parameters:
 		</profile>
 
 		<profile>
+			<id>e48</id>
+			<properties>
+				<product.project.sts>org.springsource.sts.product.e4.8</product.project.sts>
+				<p2.repository.name>Spring Tool Suite for Eclipse 4.8</p2.repository.name>
+				<groovy.compiler.feature>org.codehaus.groovy18.feature.feature.group</groovy.compiler.feature>
+				<groovy.compiler.switch>-Dgroovy.compiler.level=18</groovy.compiler.switch>
+			</properties>
+			<repositories>
+				<repository>
+					<id>photon</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/releases/photon/</url>
+				</repository>
+				<repository>
+					<id>orbit</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/tools/orbit/downloads/drops/S20180119201206/repository/</url>
+				</repository>
+				<repository>
+					<id>mylyn</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/mylyn/releases/latest</url>
+				</repository>
+				<repository>
+					<id>ajdt</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/tools/ajdt/47/dev/update</url>
+				</repository>
+				<repository>
+					<id>latest-m2e</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/technology/m2e/releases</url>
+				</repository>
+<!--				<repository>
+					<id>latest-m2e-milestones</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/technology/m2e/milestones/1.8/</url>
+				</repository> -->
+				<repository>
+					<id>swtbot</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/technology/swtbot/releases/latest/</url>
+				</repository>
+				<repository>
+					<id>groovy</id>
+					<layout>p2</layout>
+					<url>http://dist.springsource.org/snapshot/GRECLIPSE/e4.7/</url>
+				</repository>
+				<repository>
+					<id>atlassian</id>
+					<layout>p2</layout>
+					<url>http://update.atlassian.com/atlassian-eclipse-plugin/rest/e3.7</url>
+				</repository>
+				<repository>
+					<id>maven-extras-mirror</id>
+					<layout>p2</layout>
+					<url>http://download.springsource.com/release/TOOLS/third-party/m2e-sts310-signed/</url>
+				</repository>
+				<repository>
+					<id>ajdt-m2e-configurator</id>
+					<layout>p2</layout>
+					<url>http://dist.springsource.org/release/AJDT/configurator-v2/</url>
+				</repository>
+				<repository>
+					<id>maven-egit</id>
+					<layout>p2</layout>
+					<url>http://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.15.0/N/LATEST</url>
+				</repository>
+				<repository>
+					<id>maven-wro4j</id>
+					<layout>p2</layout>
+					<url>http://download.jboss.org/jbosstools/updates/m2e-extensions/m2e-wro4j/</url>
+				</repository>
+				<repository>
+					<id>maven-devtools</id>
+					<layout>p2</layout>
+					<url>http://dist.springsource.com/release/TOOLS/mavendevtools/</url>
+				</repository>
+				<repository>
+					<id>maven-dependency-support</id>
+					<layout>p2</layout>
+					<url>http://ianbrandt.github.io/m2e-maven-dependency-plugin/</url>
+				</repository>
+				<repository>
+					<id>eclipse-integration-commons</id>
+					<layout>p2</layout>
+					<url>http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</url>
+				</repository>
+				<repository>
+					<id>latest-cft</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/cft/1.1.1/</url>
+				</repository>
+				<repository>
+					<id>ansi-console</id>
+					<layout>p2</layout>
+					<url>http://dist.springsource.com/release/TOOLS/third-party/ansiconsole</url>
+				</repository>
+				<repository>
+					<id>lsp4j</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/modeling/tmf/xtext/updates/milestones/</url>
+				</repository>
+				<repository>
+					<id>latest-buildship-release</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/buildship/updates/e47/releases/2.x</url>
+				</repository>
+<!--				<repository>
+					<id>lsp4e-snapshots</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/lsp4e/snapshots/</url>
+				</repository> -->
+				<repository>
+					<id>lsp4e-releases</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/lsp4e/0.5.0milestone/</url>
+				</repository>
+			</repositories>
+			<modules>
+				<module>features/org.springsource.sts.package.e4.8</module>
+				<module>features/org.springsource.sts.product.e4.8</module>
+			</modules>
+		</profile>
+
+		<profile>
 			<id>spring-site</id>
 			<modules>
 				<module>releng/org.springsource.sts.site</module>
