--- a/pom.xml
+++ b/pom.xml
@@ -1185,7 +1185,7 @@ Optional parameters:
 		<repository>
 			<id>sts4-language-servers-specific-release</id>
 			<layout>p2</layout>
-			<url>http://dist.springsource.com/release/TOOLS/sts4-language-servers/0.1.2.201712181605/</url>
+			<url>http://dist.springsource.com/milestone/TOOLS/sts4-language-servers/20180406/</url>
 		</repository>
 <!--		<repository>
 			<id>sts4-language-servers-releases</id>
