--- a/pom.xml
+++ b/pom.xml
@@ -1037,9 +1037,14 @@ Optional parameters:
 					<url>http://download.eclipse.org/releases/photon/</url>
 				</repository>
 				<repository>
+					<id>photon-staging</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/staging/photon/</url>
+				</repository>
+				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/tools/orbit/downloads/drops/S20180302171354/repository/</url>
+					<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20180531190352/repository/</url>
 				</repository>
 				<repository>
 					<id>mylyn</id>
@@ -1086,11 +1091,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://dist.springsource.org/release/AJDT/configurator-v2/</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>maven-egit</id>
 					<layout>p2</layout>
 					<url>http://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.15.0/N/LATEST</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>maven-wro4j</id>
 					<layout>p2</layout>
