--- a/features/org.springsource.sts.product.e4.8/pom.xml
+++ b/features/org.springsource.sts.product.e4.8/pom.xml
@@ -404,6 +404,7 @@
 					<artifactId>target-platform-configuration</artifactId>
 					<version>${tycho-version}</version>
 					<configuration>
+						<executionEnvironment>JavaSE-9</executionEnvironment>
 						<resolver>p2</resolver>
 						<pomDependencies>consider</pomDependencies>
 						<ignoreTychoRepositories>true</ignoreTychoRepositories>
