--- a/features/org.springsource.sts.package.e4.8/pom.xml
+++ b/features/org.springsource.sts.package.e4.8/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.springsource.sts.features</groupId>
-    <artifactId>org.springsource.sts.features.parent</artifactId>
-    <version>3.9.6-SNAPSHOT</version>
-  </parent>
-  <artifactId>org.springsource.sts.package</artifactId>
-  <packaging>eclipse-feature</packaging>
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springsource.sts.features</groupId>
+		<artifactId>org.springsource.sts.features.parent</artifactId>
+		<version>3.9.6-SNAPSHOT</version>
+	</parent>
+	<artifactId>org.springsource.sts.package</artifactId>
+	<packaging>eclipse-feature</packaging>
 
 	<build>
 		<plugins>
@@ -27,20 +27,30 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<executionEnvironment>JavaSE-9</executionEnvironment>
+				</configuration>
+			</plugin>
+
 		</plugins>
 
-	<pluginManagement>
-	  <plugins>
-		<plugin>
-		  <groupId>org.eclipse.tycho</groupId>
-		  <artifactId>tycho-packaging-plugin</artifactId>
-		  <version>${tycho-version}</version>
-		  <configuration>
-			<format>yyyyMMddHHmm-'${p2.qualifier}'-'${package.qualifierPrefix}'</format>
-			<archiveSite>true</archiveSite>
-		  </configuration>
-		</plugin>
-	  </plugins>
-	</pluginManagement>
-  </build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-packaging-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<configuration>
+						<format>yyyyMMddHHmm-'${p2.qualifier}'-'${package.qualifierPrefix}'</format>
+						<archiveSite>true</archiveSite>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
