--- a/pom.xml
+++ b/pom.xml
@@ -1182,11 +1182,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/releases/2018-09/</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>2018-09-staging</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/staging/2018-09</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
