--- a/pom.xml
+++ b/pom.xml
@@ -1321,7 +1321,7 @@ Optional parameters:
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/tools/orbit/downloads/drops/S20181031145145/repository</url>
+					<url>https://download.eclipse.org/tools/orbit/downloads/drops/R20181128170323/repository</url>
 				</repository>
 				<repository>
 					<id>mylyn</id>
