updated manifest ls for e410 distro build to include newer version

--- a/pom.xml
+++ b/pom.xml
@@ -1418,15 +1418,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/lsp4e/snapshots/</url>
 				</repository> -->
-				<repository>
+<!--				<repository>
 					<id>lsp4e-releases</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/lsp4e/0.5.x-snapshots/</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>sts4-language-servers-specific-release</id>
 					<layout>p2</layout>
-					<url>http://dist.springsource.com/milestone/TOOLS/sts4-language-servers/20180629/</url>
+					<url>http://dist.springsource.com/milestone/TOOLS/sts4-language-servers/20181217/</url>
 				</repository>
 			</repositories>
 			<modules>
