update copyright statements for 2019

--- a/plugins/org.springsource.sts/about.properties
+++ b/plugins/org.springsource.sts/about.properties
@@ -4,13 +4,13 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-title=Spring Tool Suite \n\
+title=Spring Tool Suite 3\n\
 \n\
 Version: @QUALIFIER@\n\
 Build Id: @BUILD_ID@\n\
 Platform: Eclipse @PLATFORM_VERSION@\n\
 \n\
-Copyright (c) 2007 - 2018 Pivotal Software, Inc.\n\
+Copyright (c) 2007 - 2019 Pivotal Software, Inc.\n\
 All rights reserved. Visit http://spring.io/tools/sts\n\
 \n\
 This product includes software developed by the\n\
