--- a/plugins/org.springsource.sts/plugin.properties
+++ b/plugins/org.springsource.sts/plugin.properties
@@ -1,14 +1,14 @@
-pluginName=Spring Tool Suite
+pluginName=Spring Tool Suite 3
 providerName=Pivotal Software, Inc.
 
-productName=Spring Tool Suite
-productBlurb=Spring Tool Suite \n\
+productName=Spring Tool Suite 3
+productBlurb=Spring Tool Suite 3\n\
 \n\
 Version: @QUALIFIER@\n\
 Build Id: @BUILD_ID@\n\
 Platform: Eclipse @PLATFORM_VERSION@\n\
 \n\
-Copyright (c) 2007 - 2018 Pivotal Software, Inc.\n\
+Copyright (c) 2007 - 2019 Pivotal Software, Inc.\n\
 All rights reserved. Visit http://spring.io/tools/sts\n\
 \n\
 This product includes software developed by the\n\
