--- a/common/build.xml
+++ b/common/build.xml
@@ -56,8 +56,8 @@
 		</chmod>
 	  </then>
 	</if>
-
-	<get src="http://www.apache.org/dist/maven/binaries/apache-maven-3.0.4-bin.zip" 
+https://
+	<get src="https://www.apache.org/dist/maven/binaries/apache-maven-3.0.4-bin.zip" 
 		 dest="${project.build.directory}/../apache-maven-3.0.4-bin.zip"
 		 verbose="true"
 		 skipexisting="true"/>
@@ -72,7 +72,7 @@
 	  </then>
 	</if>
 
-	<get src="http://s3.amazonaws.com/dist.springframework.org/release/ROO/spring-roo-1.1.5.RELEASE.zip" 
+	<get src="https://s3.amazonaws.com/dist.springframework.org/release/ROO/spring-roo-1.1.5.RELEASE.zip" 
 		 dest="${project.build.directory}/../spring-roo-1.1.5.RELEASE.zip"
 		 verbose="true"
 		 skipexisting="true"/>
