--- a/features/org.springsource.sts.product.e4.9/pom.xml
+++ b/features/org.springsource.sts.product.e4.9/pom.xml
@@ -133,6 +133,37 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.6.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+					        <executable>java</executable>
+							<arguments>
+								<argument>-jar</argument>
+								<argument>${project.build.directory}/../../../common/eclipse-distribution-license-file-generator.jar</argument>
+								<argument>${project.build.directory}/products/org.springsource.sts.ide/macosx/cocoa/x86_64/SpringToolSuite4.app/Contents/Eclipse/plugins/</argument>
+								<argument>${project.build.directory}/products/org.springsource.sts.ide/macosx/cocoa/x86_64/SpringToolSuite4.app/Contents/Eclipse/open-source-licenses.txt</argument>
+								<argument>${project.build.directory}/products/org.springsource.sts.ide/linux/gtk/x86/sts-${unqualifiedVersion}.${p2.qualifier}/plugins/</argument>
+								<argument>${project.build.directory}/products/org.springsource.sts.ide/linux/gtk/x86/sts-${unqualifiedVersion}.${p2.qualifier}/open-source-licenses.txt</argument>
+								<argument>${project.build.directory}/products/org.springsource.sts.ide/linux/gtk/x86_64/sts-${unqualifiedVersion}.${p2.qualifier}/plugins/</argument>
+								<argument>${project.build.directory}/products/org.springsource.sts.ide/linux/gtk/x86_64/sts-${unqualifiedVersion}.${p2.qualifier}/open-source-licenses.txt</argument>
+								<argument>${project.build.directory}/products/org.springsource.sts.ide/win32/win32/x86/sts-${unqualifiedVersion}.${p2.qualifier}/plugins/</argument>
+								<argument>${project.build.directory}/products/org.springsource.sts.ide/win32/win32/x86/sts-${unqualifiedVersion}.${p2.qualifier}/open-source-licenses.txt</argument>
+								<argument>${project.build.directory}/products/org.springsource.sts.ide/win32/win32/x86_64/sts-${unqualifiedVersion}.${p2.qualifier}/plugins/</argument>
+								<argument>${project.build.directory}/products/org.springsource.sts.ide/win32/win32/x86_64/sts-${unqualifiedVersion}.${p2.qualifier}/open-source-licenses.txt</argument>
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>1.7</version>
