--- a/plugins/org.springsource.sts/plugin.properties
+++ b/plugins/org.springsource.sts/plugin.properties
@@ -9,10 +9,10 @@ Build Id: @BUILD_ID@\n\
 Platform: Eclipse @PLATFORM_VERSION@\n\
 \n\
 Copyright (c) 2007 - 2019 Pivotal Software, Inc.\n\
-All rights reserved. Visit http://spring.io/tools/sts\n\
+All rights reserved. Visit https://spring.io/tools3/sts\n\
 \n\
 This product includes software developed by the\n\
-Apache Software Foundation http://www.apache.org
+Apache Software Foundation https://www.apache.org
 
 productIntroTitle = Welcome to Spring Tool Suite @QUALIFIER@
 productIntroBrandingText = Spring Tool Suite
