--- a/pom.xml
+++ b/pom.xml
@@ -1204,11 +1204,23 @@ Optional parameters:
 				<groovy.compiler.switch>-Dgroovy.compiler.level=18</groovy.compiler.switch>
 			</properties>
 			<repositories>
-				<repository>
+				<!-- composite update site contains http references, using exact https urls instead -->
+<!--				<repository>
 					<id>2018-09</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/releases/2018-09/</url>
+				</repository> -->
+				<repository>
+					<id>2018-09</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/releases/2018-09/201809191002</url>
 				</repository>
+				<repository>
+					<id>2018-09-epp</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/technology/epp/packages/2018-09/</url>
+				</repository>
+
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
@@ -1340,16 +1352,23 @@ Optional parameters:
 				<groovy.compiler.switch>-Dgroovy.compiler.level=18</groovy.compiler.switch>
 			</properties>
 			<repositories>
-				<repository>
+				<!-- composite update site contains http references, using exact https urls instead -->
+<!--				<repository>
 					<id>2018-12</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/releases/2018-12/</url>
-				</repository>
-<!--				<repository>
-					<id>2018-12-staging</id>
-					<layout>p2</layout>
-					<url>https://download.eclipse.org/staging/2018-12/</url>
 				</repository> -->
+				<repository>
+					<id>2018-12</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/releases/2018-12/201812191000</url>
+				</repository>
+				<repository>
+					<id>2018-12-epp</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/technology/epp/packages/2018-12/</url>
+				</repository>
+
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
@@ -1471,16 +1490,23 @@ Optional parameters:
 				<groovy.compiler.switch>-Dgroovy.compiler.level=18</groovy.compiler.switch>
 			</properties>
 			<repositories>
-				<repository>
+				<!-- composite update site contains http references, using exact https urls instead -->
+<!--				<repository>
 					<id>2019-03</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/releases/2019-03/</url>
-				</repository>
-<!--				<repository>
-					<id>2019-03-staging</id>
-					<layout>p2</layout>
-					<url>https://download.eclipse.org/staging/2019-03/</url>
 				</repository> -->
+				<repository>
+					<id>2019-03</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/releases/2019-03/201903081000</url>
+				</repository>
+				<repository>
+					<id>2019-03-epp</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/technology/epp/packages/2019-03/RC1</url>
+				</repository>
+
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
@@ -1581,10 +1607,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/lsp4e/0.5.x-snapshots/</url>
 				</repository> -->
-				<repository>
+<!--				<repository>
 					<id>sts4-language-servers-specific-release</id>
 					<layout>p2</layout>
 					<url>https://dist.springsource.com/release/TOOLS/sts4-language-servers/20181220/</url>
+				</repository> -->
+				<repository>
+					<id>sts4-language-servers-snapshot</id>
+					<layout>p2</layout>
+					<url>https://dist.springsource.com/snapshot/TOOLS/sts4-language-servers/nightly/</url>
 				</repository>
 			</repositories>
 			<modules>
