--- a/pom.xml
+++ b/pom.xml
@@ -1531,7 +1531,7 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/releases/2019-03/</url>
 				</repository> -->
-				<repository>
+<!--				<repository>
 					<id>2019-03</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/releases/2019-03/201903081000</url>
@@ -1540,6 +1540,11 @@ Optional parameters:
 					<id>2019-03-epp</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/technology/epp/packages/2019-03/RC1</url>
+				</repository> -->
+				<repository>
+					<id>2019-03-staging</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/staging/2019-03/</url>
 				</repository>
 
 				<repository>
