--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,7 @@ Optional parameters:
 				<repository>
 					<id>latest-buildship-release</id>
 					<layout>p2</layout>
-					<url>https://download.eclipse.org/buildship/updates/e48/releases/2.x</url>
+					<url>https://download.eclipse.org/buildship/updates/e49/releases/</url>
 				</repository>
 				<repository>
 					<id>lsp4e-snapshots</id>
@@ -324,7 +324,7 @@ Optional parameters:
 				<repository>
 					<id>latest-buildship-release</id>
 					<layout>p2</layout>
-					<url>https://download.eclipse.org/buildship/updates/e49/snapshots/3.x/</url>
+					<url>https://download.eclipse.org/buildship/updates/e410/releases/</url>
 				</repository>
 				<repository>
 					<id>lsp4e-snapshots</id>
@@ -450,7 +450,7 @@ Optional parameters:
 				<repository>
 					<id>latest-buildship-release</id>
 					<layout>p2</layout>
-					<url>https://download.eclipse.org/buildship/updates/e49/snapshots/3.x/</url>
+					<url>https://download.eclipse.org/buildship/updates/e410/releases/3.x/</url>
 				</repository>
 				<repository>
 					<id>lsp4e-snapshots</id>
@@ -591,7 +591,7 @@ Optional parameters:
 				<repository>
 					<id>latest-buildship-release</id>
 					<layout>p2</layout>
-					<url>https://download.eclipse.org/buildship/updates/e49/snapshots/3.x/</url>
+					<url>https://download.eclipse.org/buildship/updates/e410/releases/</url>
 				</repository>
 				<repository>
 					<id>lsp4e-snapshots</id>
