--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,11 @@ Optional parameters:
 					<url>https://download.eclipse.org/technology/m2e/releases</url>
 				</repository>
 				<repository>
+					<id>latest-m2e-wtp</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/m2e-wtp/releases/1.4/</url>
+				</repository>
+				<repository>
 					<id>swtbot</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/technology/swtbot/releases/latest/</url>
@@ -257,6 +262,11 @@ Optional parameters:
 					<url>https://download.eclipse.org/technology/m2e/releases</url>
 				</repository>
 				<repository>
+					<id>latest-m2e-wtp</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/m2e-wtp/releases/1.4/</url>
+				</repository>
+				<repository>
 					<id>swtbot</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/technology/swtbot/releases/latest/</url>
@@ -376,6 +386,11 @@ Optional parameters:
 					<id>latest-m2e</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/technology/m2e/releases</url>
+				</repository>
+				<repository>
+					<id>latest-m2e-wtp</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/m2e-wtp/releases/1.4/</url>
 				</repository>
 				<repository>
 					<id>swtbot</id>
@@ -517,6 +532,11 @@ Optional parameters:
 					<id>latest-m2e</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/technology/m2e/releases</url>
+				</repository>
+				<repository>
+					<id>latest-m2e-wtp</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/m2e-wtp/releases/1.4/</url>
 				</repository>
 				<repository>
 					<id>swtbot</id>
