use specific language server and lsp4e versions for different eclipse platform versions

--- a/pom.xml
+++ b/pom.xml
@@ -336,10 +336,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/buildship/updates/e410/releases/</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>lsp4e-snapshots</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/lsp4e/snapshots/</url>
+				</repository> -->
+				<repository>
+					<id>lsp4e-releases</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/lsp4e/releases/0.9.0/</url>
 				</repository>
 				<repository>
 					<id>sts4-language-servers-specific-release</id>
@@ -467,26 +472,26 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/buildship/updates/e410/releases/3.x/</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>lsp4e-snapshots</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/lsp4e/snapshots/</url>
-				</repository>
-<!--				<repository>
-					<id>lsp4e-releases</id>
-					<layout>p2</layout>
-					<url>https://download.eclipse.org/lsp4e/0.5.x-snapshots/</url>
-				</repository> -->
-<!--				<repository>
-					<id>sts4-language-servers-specific-release</id>
-					<layout>p2</layout>
-					<url>https://dist.springsource.com/release/TOOLS/sts4-language-servers/20190326/</url>
 				</repository> -->
 				<repository>
+					<id>lsp4e-releases</id>
+					<layout>p2</layout>
+					<url>https://download.eclipse.org/lsp4e/releases/0.9.0/</url>
+				</repository>
+				<repository>
+					<id>sts4-language-servers-specific-release</id>
+					<layout>p2</layout>
+					<url>https://dist.springsource.com/release/TOOLS/sts4-language-servers/20190618/</url>
+				</repository>
+<!--				<repository>
 					<id>sts4-language-servers-snapshot</id>
 					<layout>p2</layout>
 					<url>https://dist.springsource.com/snapshot/TOOLS/sts4-language-servers/nightly/</url>
-				</repository>
+				</repository> -->
 			</repositories>
 			<modules>
 				<module>features/org.springsource.sts.package.e4.11</module>
@@ -623,16 +628,16 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/lsp4e/0.5.x-snapshots/</url>
 				</repository> -->
-<!--				<repository>
+				<repository>
 					<id>sts4-language-servers-specific-release</id>
 					<layout>p2</layout>
-					<url>https://dist.springsource.com/release/TOOLS/sts4-language-servers/20190326/</url>
-				</repository> -->
-				<repository>
+					<url>https://dist.springsource.com/release/TOOLS/sts4-language-servers/20190618/</url>
+				</repository>
+<!--				<repository>
 					<id>sts4-language-servers-snapshot</id>
 					<layout>p2</layout>
 					<url>https://dist.springsource.com/snapshot/TOOLS/sts4-language-servers/nightly/</url>
-				</repository>
+				</repository> -->
 			</repositories>
 			<modules>
 				<module>features/org.springsource.sts.package.e4.12</module>
