updated to avoid latest lsp4j bits sneaking in

--- a/pom.xml
+++ b/pom.xml
@@ -195,26 +195,26 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://dist.springsource.com/release/TOOLS/third-party/ansiconsole</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>lsp4j</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/modeling/tmf/xtext/updates/milestones/</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>latest-buildship-release</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/buildship/updates/e49/releases/</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>lsp4e-snapshots</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/lsp4e/snapshots/</url>
-				</repository>
-<!--				<repository>
+				</repository> -->
+				<repository>
 					<id>lsp4e-releases</id>
 					<layout>p2</layout>
-					<url>https://download.eclipse.org/lsp4e/0.5.x-snapshots/</url>
-				</repository> -->
+					<url>https://download.eclipse.org/lsp4e/releases/0.9.0/</url>
+				</repository>
 				<repository>
 					<id>sts4-language-servers-specific-release</id>
 					<layout>p2</layout>
@@ -326,11 +326,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://dist.springsource.com/release/TOOLS/third-party/ansiconsole</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>lsp4j</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/modeling/tmf/xtext/updates/milestones/</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>latest-buildship-release</id>
 					<layout>p2</layout>
@@ -462,11 +462,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://dist.springsource.com/release/TOOLS/third-party/ansiconsole</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>lsp4j</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/modeling/tmf/xtext/updates/milestones/</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>latest-buildship-release</id>
 					<layout>p2</layout>
@@ -608,11 +608,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>https://dist.springsource.com/release/TOOLS/third-party/ansiconsole</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>lsp4j</id>
 					<layout>p2</layout>
 					<url>https://download.eclipse.org/modeling/tmf/xtext/updates/milestones/</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>latest-buildship-release</id>
 					<layout>p2</layout>
