add entitlements and hardened runtime options to macos singning + add steps for notarizing macos dmg

--- a/releng/org.springsource.sts.distribution-bundles.e410/pom.xml
+++ b/releng/org.springsource.sts.distribution-bundles.e410/pom.xml
@@ -86,19 +86,42 @@
 
 								<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
 
-								<property name="dmgName" value="${project.build.directory}/spring-tool-suite-${unqualifiedVersion}.${p2.qualifier}-${dist.target}-macosx-cocoa-x86_64.dmg" />
+								<property name="dmgName" value="${project.build.directory}/spring-tool-suite-${unqualifiedVersion}.${p2.qualifier}-${dist.target}-macosx-cocoa-x86_64.dmg"/>
 
 								<exec executable="codesign" failonerror="true">
 									<arg value="--verbose"/>
 								    <arg value="--keychain"/>
 								    <arg value="${env.KEYCHAIN}"/>
 								    <arg value="-s"/>
-								    <arg value="Developer ID Application: Trevor Marshall"/>
+								    <arg value="${env.MACOS_CERTIFICATE_ID}"/>
 								    <arg value="${dmgName}"/>
 								</exec>
 
 								<checksum file="${dmgName}" algorithm="SHA1" fileext=".sha1" />
 								<checksum file="${dmgName}" algorithm="MD5" fileext=".md5" />
+
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+
+					<!-- the notarizing of the DMG file needs this service running somewhere: https://github.com/eclipse-cbi/macos-notarization-service -->
+					<execution>
+						<id>osx-dmg-notarizing</id>
+						<phase>verify</phase>
+						<configuration>
+							<skip>${skip.osx.notarizing}</skip>
+							<target>
+
+								<property name="dmgName" value="${project.build.directory}/spring-tool-suite-${unqualifiedVersion}.${p2.qualifier}-${dist.target}-macosx-cocoa-x86_64.dmg"/>
+
+								<exec executable="/bin/bash" failonerror="true">
+									<arg value="${project.build.directory}/../macos-notarize.sh"/>
+									<arg value="${dmgName}"/>
+								    <arg value="${env.MACOS_NOTARIZATION_SERVICE_URL}"/>
+								</exec>
 
 							</target>
 						</configuration>
