--- a/features/org.springsource.sts.product.e4.12/pom.xml
+++ b/features/org.springsource.sts.product.e4.12/pom.xml
@@ -372,10 +372,15 @@
 
 								<exec executable="codesign" failonerror="true">
 									<arg value="--verbose"/>
+									<arg value="--deep"/>
+									<arg value="--force"/>
+									<arg value="--entitlements"/>
+									<arg value="${project.build.directory}/../entitlements.plist"/>
+									<arg value="--options=runtime"/>
 								    <arg value="--keychain"/>
 								    <arg value="${env.KEYCHAIN}"/>
 								    <arg value="-s"/>
-								    <arg value="Developer ID Application: Trevor Marshall"/>
+								    <arg value="${env.MACOS_CERTIFICATE_ID}"/>
 								    <arg value="${build.destination.cocoa.x86_64}/STS.app"/>
 								</exec>
 
